# EOS-2048

./: .gitignore  .gitpod.yml  LICENSE  README.md  createAcc.sh  deploy.sh  eosc-tx.json  package-lock.json  package.json  zeus-box.json
contracts/eos/: CMakeLists.txt
contracts/eos/mycontract/: main.cpp
contracts/eos/oracleservice/: CMakeLists.txt
contracts/eos/testcntrt/: main.cpp
contracts/eos/tzfe/: CMakeLists.txt  main.cpp  tzfe.cpp  tzfe.hpp
contracts/eos/vcpuconsumer/vcpuconsumer-vcpu-prefix/tmp/: vcpuconsumer-vcpu-cfgcmd.txt
frontends/: .gitignore  package.json
frontends/public/: index.html
frontends/src/: App.js  env-example
frontends/src/components/: Cell.js  GameEndOverlay.js  Register.js  Row.js  TileView.js  board.js  leaderboard.js
frontends/src/components/UI/Button/: Button.js
frontends/src/components/UI/Input/: Input.js
frontends/src/components/UI/Login/: Login.js
frontends/src/helpers/: getClient.js
frontends/src/reducers/: UserReducer.js
frontends/src/services/: ApiService.js
frontends/src/store/: index.js
frontends/src/style/css/: main.css
frontends/src/style/scss/: main.scss  style.scss
models/boxmaps/: 00-mapping.json
models/contract-deployments/: trinhtan1234.json
services/demux/: package.json
test/: 48.contract.spec.js  tzfe.contract.spec.js
